// file: pkg/db/proto/responses/query_response.proto
edition = "2023";

package gcommon.v1.database;

import "db/proto/query_stats.proto";
import "db/proto/result_set.proto";
import "google/protobuf/go_features.proto";
import "pkg/common/proto/error.proto";
import "pkg/db/proto/query_stats.proto";
import "pkg/db/proto/result_set.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * QueryResponse contains the results of a database query operation.
 * Includes result data, execution statistics, and error information.
 */
message QueryResponse {
  // Query result set with data and metadata
  ResultSet result_set = 1 [lazy = true];

  // Query execution statistics and performance metrics
  MetricsQueryStats stats = 2 [lazy = true];

  // Error information if the query failed
  gcommon.v1.common.Error error = 3 [lazy = true];
}
