// file: pkg/db/proto/services/database_service.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/db/proto/requests/query_request.proto";
import "pkg/db/proto/responses/query_response.proto";
import "pkg/db/proto/responses/query_row_response.proto";
import "pkg/db/proto/requests/execute_request.proto";
import "pkg/db/proto/responses/execute_response.proto";
import "pkg/db/proto/requests/execute_batch_request.proto";
import "pkg/db/proto/responses/execute_batch_response.proto";
import "pkg/db/proto/requests/begin_transaction_request.proto";
import "pkg/db/proto/responses/begin_transaction_response.proto";
import "pkg/db/proto/requests/commit_transaction_request.proto";
import "pkg/db/proto/requests/rollback_transaction_request.proto";
import "pkg/db/proto/requests/get_connection_info_request.proto";
import "pkg/db/proto/responses/get_connection_info_response.proto";
import "pkg/db/proto/requests/health_check_request.proto";
import "pkg/db/proto/responses/health_check_response.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto;dbpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * DatabaseService provides comprehensive database operations including
 * queries, transactions, batch operations, and health monitoring.
 */
service DatabaseService {
  // Execute a read-only query and return results
  rpc Query(QueryRequest) returns (QueryResponse);

  // Execute a query expected to return at most one row
  rpc QueryRow(QueryRequest) returns (QueryRowResponse);

  // Execute a write operation (INSERT, UPDATE, DELETE)
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);

  // Execute multiple operations in a single batch
  rpc ExecuteBatch(ExecuteBatchRequest) returns (ExecuteBatchResponse);

  // Start a new database transaction
  rpc BeginTransaction(BeginTransactionRequest) returns (BeginTransactionResponse);

  // Commit an active transaction
  rpc CommitTransaction(CommitTransactionRequest) returns (google.protobuf.Empty);

  // Roll back an active transaction
  rpc RollbackTransaction(RollbackTransactionRequest) returns (google.protobuf.Empty);

  // Get information about database connection pool
  rpc GetConnectionInfo(GetConnectionInfoRequest) returns (GetConnectionInfoResponse);

  // Check database connectivity and health
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}
